tests/valid/tags_metadata/metadata.fred
phone (country="Brazil") "32131123"