tests/invalid/tags_metadata/wrong_tag_order.fred
(attr=1) tag "tagged"